# Gateway-MQTT-Modbus

./: LICENSE  README.md
gateway-broker/: package-lock.json  package.json
gateway-broker/src/: app.js
gateway-broker/src/core/: broker.js  clientRequest.js  gateway.js  queue.js
gateway-broker/src/database/: dataBaseAccess.js  debuger.js  manager.js
gateway-broker/src/keywords/: diagnosisKeywords.json  modbusKeywords.json
gateway-broker/src/maps/: diagnosisMap.js  keywordsMap.js
gateway-broker/src/parser/: modbusPacketBufferizer.js  modbusRequestEncoder.js  modbusResponseDebufferizer.js  modbusResponseDecoder.js
gateway-broker/src/schemas/: orgSchemas.js  requestSchema.js
gateway-broker/src/validator/: requestFormatter.js  requestValidator.js  schemaManager.js
gateway-esp32-firmware/: CMakeLists.txt  sdkconfig
gateway-esp32-firmware/include/: modbusserial.h  mqttclient.h  uartmanager.h  wifimanager.h
gateway-esp32-firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
gateway-esp32-firmware/src/: modbusserial.c  mqttclient.c  uartmanager.c  wifimanager.c
python-mqtt-client/: main.py  mqtt_client.py  requirements.txt
